--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <packaging>war</packaging>
     <groupId>com.gouri.v4</groupId>
     <artifactId>Hello</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>2.0</version>
     <build>
     <plugins>
     <plugin>
