--- a/pom.xml
+++ b/pom.xml
@@ -45,3 +45,4 @@
         <developerConnection>scm:git:https://github.com/mangala1/tomato.git </developerConnection>
     </scm>
 </project>
+#changed the pom file
