--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,28 @@
         </configuration>
     </plugin>
     </plugins>
+             
+      <plugins>       
+        <plugin>
+         <groupId>org.codehaus.mojo</groupId>
+         <artifactId>cobertura-maven-plugin</artifactId>
+         <version>2.2</version>
+         <configuration>
+            <formats>
+               <format>xml</format>
+            </formats>
+         </configuration>
+         <executions>
+            <execution>
+               <phase>package</phase>
+               <goals>
+                  <goal>cobertura</goal>
+               </goals>
+            </execution>
+         </executions>
+      </plugin>
+   </plugins>
+             
     </build>
     <distributionManagement>
         <repository>
@@ -42,20 +64,8 @@
                         <format>html</format>
                         <format>xml</format>
                     </formats>
-                </configuration>
-                 <executions>
-                <execution>
-                    <phase>package</phase>
-                    <goals>
-                        <goal>cobertura</goal>
-                    </goals>
-                </execution>
-            </executions>
-
+                     </configuration>
             </plugin>
-
         </plugins>
-
     </reporting>
-
 </project>
